--- a/py4j-java/pom.xml
+++ b/py4j-java/pom.xml
@@ -24,6 +24,16 @@
     </description>
 
     <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+    </plugins>
         <sourceDirectory>src/</sourceDirectory>
         <testSourceDirectory>test/</testSourceDirectory>
     </build>
